# simple-server

./: Dockerfile  bash.sh  pyproject.toml  wsgi.py
indexes/: index.11104.html  index.11110.html  index.11112.html  index.11113.html  index.11123.html  index.22202.html  index.22209.html  index.22214.html  index.22215.html  index.33321.html  index.33327.html  index.33363.html  index.33370.html  index.33399.html  index.44408.html  index.55501.html  index.55504.html  index.55505.html
server/: routes.py
server/static/css/: os.css
server/templates/: home.html  layout.html
