[tool.poetry]
name = "Simple Server"
version = "0.1.0"
description = ""
authors = ["juanbomfim22 <juanbomfim22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
Pygments = "^2.12.0"

[tool.poetry.dev-dependencies]
livereload = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
